using responses specification
